
    o	install.packages() and friends now accept a vector of URLs for
	'CRAN' or 'contriburl' and get the newest available version of
	a package from the first repository on the list in which it is
	found.

    o   New argument 'immediate.' to warning() to send an immediate
	warning.

    o   file.append() has been tuned, including for the case of
	appending many files to a single file.


UTILITIES

    o   New functions mirror2html() and checkCRAN().

    o   R CMD check has a new option '--use-valgrind'.

    o	tools:::.install_package_code_files() (used to collate R files
	when installing packages) ensures files are separated by a
	line feed.
    

DOCUMENTATION

    o	File doc/html/faq.html no longer exists, and doc/manual/R-FAQ.html
	(which has active links to other manuals) is used instead.
	(If makeinfo >= 4.5 is not available, the version on CRAN is
	linked to.)

    o	Manual 'Writing R Extensions' has further details on writing
	new front-ends for R using the new public header files.


C-LEVEL FACILITIES

    o	There are new public C/C++ header files Rinterface.h and
	R_ext/RStartup.h for use with external GUIs.


DEPRECATED & DEFUNCT

    o	The aqua module for MacOS X has been removed: --with-aqua now
	refers to the unbundled Cocoa GUI.

    o	Capabilities "bzip2", "GNOME, "libz" and "PCRE" are defunct.

    o	Capability "IEEE754" is deprecated.


INSTALLATION CHANGES

    o	R_XTRA_[CF]FLAGS are now used during the configuration tests,
	and [CF]PICFLAGS if --enable-R-shlib was specified.  This
	ensures that features such as inlining are only used if the
	compilation flags specified support them.  (PR#7257)

    o	Files FAQ, RESOURCES, doc/html/resources.html are no longer in
	the SVN sources but are made by 'make dist'.

    o	The GNOME GUI is unbundled, currently available by Subversion only.

    o	Configuring without having the recommended packages is now an
	error unless --with-recommended-packages=no is used.


BUG FIXES
